# info-4940-llms-s26

./: .gitignore  README.md  pyproject.toml  test.ipynb
hw/hw00/: 4940-HW-00-template.docx
hw/hw01/: 4940-HW-01-notebook.html  4940-HW-01-notebook.ipynb
hw/hw02/: 4940-HW-02-notebook.html  4940-HW-02-notebook.ipynb
hw/hw03/: 4940-HW-03-dpo.ipynb
notebooks/: 4940-act-01.ipynb  4940-act-02.ipynb  4940-act-03.ipynb  4940-act-04.ipynb  4940-act-05.ipynb  4940-act-06-SOLUTION.ipynb  4940-act-06.ipynb  4940-act-07.ipynb  4940-act-08.ipynb  4940-lec-02.ipynb  4940-lec-03.ipynb  4940-lec-04.ipynb  4940-lec-05.ipynb  4940-lec-06.ipynb  4940-lec-07.ipynb  4940-lec-08.ipynb  4940-lec-09.ipynb  4940-lec-10.ipynb
notebooks/data/: cornell_ithaca_corpus.json
project/: final_project.md
