[project]
name = "info-4940-llms-s26"
version = "0.1.0"
description = "Course materials for INFO 4940/5940-11: How LLMs Work" 
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.5.0",
    "jupyterlab>=4.5.3",
    "transformers>=5.0.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "ipywidgets>=8.1.8",
    "seaborn>=0.13.2",
    "scikit-learn>=1.8.0",
    "evaluate>=0.4.6",
    "accelerate>=1.12.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu126", marker = "sys_platform == 'linux'" },
    { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
]
torchvision = [
    { index = "pytorch-cu126", marker = "sys_platform == 'linux'" },
    { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
